force-app/main/default/objects/ppmail__Mail_Content__c/ppmail__Mail_Content__c.object-meta.xml
<CustomObject>
    <description>Stores the content of emails, including the subject, HTML body, and plain text body. It can be used to create and manage email templates or to store the content of individual emails.</description>
    <label>Mail Content</label>
    <nameField>
        <label>Mail Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mail Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>