force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__Do_Not_Export__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Do_Not_Export__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this mail content will not be exported to external systems.</description>
    <label>Do Not Export</label>
    <type>Checkbox</type>
</CustomField>