force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__External_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__External_Template_ID__c</fullName>
    <description>The ID of the template in an external mail service provider, such as SendGrid or Mailgun. This is used to link the Mail Content record to a template that is stored and managed outside of Salesforce.</description>
    <label>External Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>