force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>ppmail__HTML_Body__c</fullName>
    <description>The HTML version of the email body.</description>
    <label>HTML Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>