force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__Plain_Body__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Plain_Body__c</fullName>
    <description>The plain text version of the email body.</description>
    <label>Plain Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>