force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__SF_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__SF_Template_ID__c</fullName>
    <description>The Salesforce ID of the email template that this content is based on. This is used to link the Mail Content record to a standard Salesforce email template.</description>
    <label>SF Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>