force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__Source__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to another Mail Content record that was used as the source for this content. This can be used to track the relationship between a template and an email that was created from that template.</description>
    <label>Source</label>
    <referenceTo>ppmail__Mail_Content__c</referenceTo>
    <relationshipLabel>Mail Contents (Source For)</relationshipLabel>
    <relationshipName>Mail_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>