force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__Subject__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Subject__c</fullName>
    <description>The subject line of the email.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>