force-app/main/default/objects/ppmail__Mail_Content__c/fields/ppmail__Template__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Mail Content record is a template that can be used to create new emails.</description>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>