force-app/main/default/objects/ppmail__Mail_Content__c/listViews/ppmail__All_Mail_Contents.listView-meta.xml
<ListView>
    <fullName>ppmail__All_Mail_Contents</fullName>
    <columns>NAME</columns>
    <columns>ppmail__Subject__c</columns>
    <columns>ppmail__Template__c</columns>
    <columns>ppmail__Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Mail Contents</label>
</ListView>